<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableRow
        android:id="@+id/planTableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:padding="5dip" >

        <TextView
            android:id="@+id/tvStudentName"
            android:text="@string/label_student_name"
            android:gravity="left"
             />

        <EditText
            android:id="@+id/etStudentName"
            android:width="170dip"
            android:hint=""
            android:inputType="text" />
    </TableRow>
    
    <TableRow
        android:id="@+id/planTableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:padding="5dip" >

        <TextView
            android:id="@+id/tvClassName"
            android:text="@string/label_class_name"
            android:gravity="left"
            />

        <EditText
            android:id="@+id/etClassName"
            android:width="170dip"
            android:hint=""
            android:inputType="text" />
    </TableRow>
    
    <TableRow
        android:id="@+id/planTableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dip" >
        
        <Button
            android:id="@+id/btnAddPlan"            
            android:text="@string/button_save" 
            android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"/>
        
        <Button
            android:id="@+id/btnAddPlanCancel"            
            android:text="@string/button_cancel"
            android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:layout_weight="1" />
    </TableRow>
    

</TableLayout>