<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    >

    

    
    <TableRow
        android:id="@+id/addSubjectTableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip" >

        <TextView
            android:id="@+id/tvAddSubjectLabel"
            android:gravity="left"
            android:text="@string/label_subject_name" />

        <EditText
            android:id="@+id/etAddSubjectName"
            android:hint=""
            android:inputType="text"
            android:layout_width="150dip"
            />
    </TableRow>

    
    <TableRow
        android:id="@+id/addSubjectTableRow2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dip" >

        <Button
            android:id="@+id/btnAddSubject"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_save" />

        <Button
            android:id="@+id/btnAddSubjectCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_cancel" />
    </TableRow>

</TableLayout>